# codex-ai-rd-team

./: ARCHITECTURE.md  LICENSE  Makefile  QUICKSTART.md  README.md  pyproject.toml
codex/: sn.md
config/: role-prompts.json
docs/: README.md
orchestrator/: __init__.py  agent_clients.py  agent_dispatcher.py  cli.py  coordinator.py  message_bus.py  message_router.py  mode_classifier.py  planner.py  profiles.py  prompts.py  runtime_models.py  state_machine.py  workflow.py
python/: ARCHITECTURE.md  QUICKSTART.md  README.md  pyproject.toml
python/config/: role-prompts.json
python/docs/requirements/: prd.md
python/docs/reviews/: review-1.md
python/docs/superpowers/plans/: 2026-04-12-rd-team-b-plus-a1-implementation.md
python/docs/superpowers/specs/: 2026-04-12-rd-team-b-plus-a1-design.md
python/orchestrator/: artifacts.py  cli.py  coordinator.py  inbox_watcher.py  message_bus.py  runtime_store.py
python/rd-team/: SKILL.md
python/rd-team/agents/: analyst.md  architect.md  frontend-dev.md
python/runtime/: run-20260411153908.json  run-20260411175637.json
python/tests/: test_a1_layout.py  test_agent_dispatcher.py  test_artifacts.py  test_cli_e2e.py  test_cli_watch_inbox.py  test_coordinator.py  test_coordinator_recovery.py  test_inbox_watcher.py  test_message_bus.py  test_planner.py  test_prompts.py  test_runtime_models.py  test_runtime_store.py
runtime/: run-20260411154314.json  run-20260411175739796642.json  run-20260411175739847593.json
scripts/: sync_tech_profiles.py
tests/: test_a1_layout.py  test_agent_clients.py  test_artifacts.py  (+14 more)
(+27 files in other folders)
